Make two runs of MTRR setting when setting memory ranges to write-back. At the first run only set up uncacheable MTRRs and in the second run set the write-back ones up. If this order is not followed, we could set too large ranges to cacheable first and then limit it back to uncacheable later. On systems with enough physical memory this would lead to a temporary situation in which areas become cacheable that must not be, resulting in system hangs or other unexpected behaviour. Fixes last part of #4018.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@31027 a95241bf-73f2-0310-859d-f6bbb57e9c96